fix(CookieCompliancePopup): Remove overflow-property in styling

--- a/src/components/CookieCompliancePopup.scss
+++ b/src/components/CookieCompliancePopup.scss
@@ -121,7 +121,6 @@ $screen-md: 720px;
     &__buttons-container {
       flex-direction: column;
       cursor: pointer;
-      overflow: hidden;
       width: auto;
       font-size: 18px;
       line-height: 28px;
